# vomacs

./: .SRCINFO  .gitignore  PKGBUILD  README.md  pyproject.toml  vomacsd-0.1.4.r26.g58d7abd-1-any.pkg.tar.zst  vomacsd.install
.github/workflows/: quality.yml  release.yml  weekly-drift.yml
contrib/: vomacs-kde-helper.service  vomacs.service  vomacsd-kde-helper.service  vomacsd.service
packaging/arch/: PKGBUILD.in  PKGBUILD.local.in  render_pkgbuild.py
python-src/vomacsd/: audio.py  cli.py  config.py  kde.py  kde_helper.py  openai_api.py  output.py
src/vomacs/: __main__.py  cli.py  config.py  daemon.py  hooks.py  kde_helper.py  openai_api.py  output.py
src/vomacsd/: __main__.py  daemon.py  hooks.py  kde_helper.py  openai_api.py  output.py
tests/: test_cli.py  test_config.py  test_daemon.py  test_hooks.py  test_output.py
