[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vomacsd"
version = "0.1.0"
description = "Hookable voice transcription daemon for KDE Wayland"
requires-python = ">=3.11"
dependencies = ["websocket-client>=1.8.0"]

[project.scripts]
vomacsd = "vomacsd.cli:main"
vomacsd-kde-helper = "vomacsd.kde_helper:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
