[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vomacsd"
version = "0.1.4"
description = "Hookable voice transcription daemon for KDE Wayland"
license = "0BSD"
requires-python = ">=3.13"
dependencies = ["websocket-client>=1.8.0"]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.7",
]

[project.scripts]
vomacsd = "vomacsd.cli:main"
vomacsd-kde-helper = "vomacsd.kde_helper:main"

[tool.setuptools]
package-dir = {"" = "python-src"}

[tool.setuptools.packages.find]
where = ["python-src"]

[tool.ruff]
target-version = "py313"
src = ["python-src", "tests"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
files = ["python-src/vomacsd", "tests"]
mypy_path = ["python-src"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["websocket"]
ignore_missing_imports = true
